k8s/rating-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
  template:
    metadata:
      labels:
        app: rating-service
    spec:
      containers:
      - name: rating-service
        image: cncc62/rating-service:latest
        ports:
        - containerPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  type: ClusterIP
  selector:
    app: rating-service
  ports:
  - port: 8003
    targetPort: 8003
