k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8001
      - path: /anime
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 8002
      - path: /rating
        pathType: Prefix
        backend:
          service:
            name: rating-service
            port:
              number: 8003
